--- a/src/locales/es.yml
+++ b/src/locales/es.yml
@@ -4,29 +4,31 @@ chat:
   sendMessage: "Enviar mensaje"
   placeholder: "Escribe tu mensaje aquí..."
 
-login: 
+login:
   title: "Iniciar Sesión"
-  description: "Ingrese su correo electrónico a continuación para acceder a su cuenta."
-  emailLabel: "Email"
-  emailPlaceholder: "m@example.com"
-  passwordLabel: "Contraseña"
-  forgotPassword: "Olvidaste tu contraseña?"
+  description: "Ingrese su correo electrónico para acceder a su cuenta."
+  email:
+    label: "Correo electrónico"
+    placeholder: "m@example.com"
+  password:
+    label: "Contraseña"
+    forgot: "¿Olvidaste tu contraseña?"
   button: "Iniciar sesión"
-  noAccountText: "No tienes una cuenta?"
-  registerLink: "Regístrate"
+  link:
+    register: "Regístrate"
+    noAccount: "¿No tienes una cuenta?"
 
-forgotPassword: 
-  companyName: "CODECTA."
-  welcomeTitle: "Recupera tu cuenta"
-  noAccountText: "Ingresa tu correo electrónico para recibir un enlace para recuperar tu contraseña."
-  emailLabel: "Correo electrónico"
-  emailPlaceholder: "m@example.com"
-  returnToLogin: "Volver a iniciar sesión"
-  footerText: "Al hacer clic en continuar, aceptas nuestros"
-  termsOfService: "Términos de servicio"
-  privacyPolicy: "Política de privacidad"
+forgotPassword:
+  company: "CODECTA"
+  title: "Recupera tu cuenta"
+  description: "Ingresa tu correo para recibir un enlace y recuperar tu contraseña."
+  email:
+    label: "Correo electrónico"
+    placeholder: "m@example.com"
+  link:
+    back: "Volver a iniciar sesión"
+  footer:
+    text: "Al continuar aceptas nuestros"
+    terms: "Términos de servicio"
+    privacy: "Política de privacidad"
   button: "Enviar enlace"
-
-
-
-
