--- a/src/locales/es.yml
+++ b/src/locales/es.yml
@@ -6,29 +6,31 @@ chat:
 
 login:
   title: "Iniciar Sesión"
-  description: "Ingrese su correo electrónico para acceder a su cuenta."
-  email:
-    label: "Correo electrónico"
-    placeholder: "m@example.com"
-  password:
-    label: "Contraseña"
-    forgot: "¿Olvidaste tu contraseña?"
-  button: "Iniciar sesión"
+  desc: "Ingrese su nombre de usuario."
+  form:
+    username:
+      label: "Nombre de usuario"
+      placeholder: "Escribe aqui..."
+    password:
+      label: "Contraseña"
+      forgot: "¿Olvidaste tu contraseña?"
+    button: "Iniciar sesión"
   link:
     register: "Regístrate"
-    noAccount: "¿No tienes una cuenta?"
+    noaccount: "¿No tienes una cuenta?"
 
-forgotPassword:
-  company: "CODECTA"
+forgot:
+  brand: "CODECTA"
   title: "Recupera tu cuenta"
-  description: "Ingresa tu correo para recibir un enlace y recuperar tu contraseña."
-  email:
-    label: "Correo electrónico"
-    placeholder: "m@example.com"
+  desc: "Ingresa tu correo para recibir un enlace y recuperar tu contraseña."
+  form:
+    email:
+      label: "Correo electrónico"
+      placeholder: "m@example.com"
+    button: "Enviar enlace"
   link:
     back: "Volver a iniciar sesión"
   footer:
-    text: "Al continuar aceptas nuestros"
+    accept: "Al continuar aceptas nuestros"
     terms: "Términos de servicio"
     privacy: "Política de privacidad"
-  button: "Enviar enlace"
